libs/extractor/tests/snapshots/all_tests__extract_global_css_with_font_faces-7.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\nglobalCss({\n  fontFaces: [\n    {\n      fontFamily: \"Roboto Regular2\",\n      src: \"//fonts/Roboto-Regular.ttf\",\n      fontWeight: 400,\n    },\n    {\n      fontFamily: \"Roboto Regular\",\n      src: \"//fonts/Roboto Regular.ttf\",\n      fontWeight: 400,\n    },\n    {\n      fontFamily: \"Roboto Regular3\",\n      src: \"fonts/Roboto Regular.ttf\",\n      fontWeight: 400,\n    },\n    {\n      fontFamily: \"Roboto Regular4\",\n      src: \"local('fonts/Roboto Regular.ttf')\",\n      fontWeight: 400,\n    },\n  ]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "\"Roboto Regular\"",
                    "font-weight": "400",
                    "src": "url(\"//fonts/Roboto Regular.ttf\")",
                },
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "\"Roboto Regular2\"",
                    "font-weight": "400",
                    "src": "url(//fonts/Roboto-Regular.ttf)",
                },
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "\"Roboto Regular3\"",
                    "font-weight": "400",
                    "src": "url(\"fonts/Roboto Regular.ttf\")",
                },
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "\"Roboto Regular4\"",
                    "font-weight": "400",
                    "src": "local('fonts/Roboto Regular.ttf')",
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
